--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Staking App</title>
   </head>
-  <body class="h-screen">
-    <div id="app" class="w-full h-full flex flex-col"></div>
+  <body>
+    <div id="app" class="w-full min-h-screen h-full flex flex-col"></div>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
