--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Staking App</title>
   </head>
   <body>
-    <div id="app" class="w-full min-h-screen h-full flex flex-col"></div>
+    <div id="app" class="flex flex-col min-h-screen"></div>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
